First draft of StatsBomb vertical plot

--- a/website/guides/getting_started.qmd
+++ b/website/guides/getting_started.qmd
@@ -69,6 +69,18 @@ install.packages(c("devtools", "tidyverse", "ggplot2", "glmnet", "ranger", "xgbo
 ```
 :::
 
+### Colorblind-friendly graphics
+
+I am especially partial to the Okabe-Ito color palette.
+Throughout the course notes, you will see snippets like
+```{r oi-def}
+oi_colors <-
+  palette.colors(palette = "Okabe-Ito")
+```
+in which we explicitly create a vector holding colors from this color palette.
+<!--
+  More resources about plotting in a colorblind friendly fashion
+--> 
 ## Version control (Git & GitHub)
 
 <!--
