Add clips of beth meades goals

--- a/website/lectures/lecture2.qmd
+++ b/website/lectures/lecture2.qmd
@@ -10,8 +10,19 @@ execute:
 Consider the following goals scored by Beth Meade during EURO 2022.
 
 
+:::: {.columns}
 
-Qualitatively, the first goal seems less impressive: given that she is in this position, if she sho
+:::{.column width="49%"}
+{{< video https://youtube.com/clip/UgkxS9IXis1jcLq7Q5oTB2ED6Dkb34FT7TmM?si=-2MwgWJsy2HkeWgb >}}
+
+:::
+
+:::{.column width="49%"}
+{{< video https://youtube.com/clip/UgkxJKtmAvMQ9eXTygNxJUkLL1BvVN7o2njn?si=TUaiNTdkohxUWfqr >}}
+:::
+
+::::
+
 
 We can make these statements more quantiatively precise using *expected goals*
 
