Lecture 4 does not render

--- a/website/lectures/lecture5.qmd
+++ b/website/lectures/lecture5.qmd
@@ -19,6 +19,20 @@ Of the total $-\delta_{i}$ we need to
   hc_x, hc_y: plot them all to get a sense of where things are; we can rotate by 180 ccw so that home plate is at the bottom and then we can translate so home plate is at (0,0)
 -->
 
+```{r}
+#| echo: false
+load("~/Dropbox/Teaching/2025-26/stat479_f25_sports/lecture_planning/pitchFraming/statcast2024.RData")
+```
+
+<!--
+  when hc_x is NA but type == 1 that might be a home run and there is just no coordinate
+  fit a GAM with out or not 
+-->
+
+```{r plot-hits}
+
+```
+
 ## Fielding run values
 
 
