--- a/website/lectures/lecture3.qmd
+++ b/website/lectures/lecture3.qmd
@@ -1,21 +1,43 @@
 ---
-title: "Lecture 3: Building our own XG model"
+title: "Lecture 3: Estimating the Expected Value of a Game State"
 format: html
 ---
 
 
 ## Overview
 
-### Key Topics
 
-We will start with logistic regression and then move on to regression trees and ensembles to steadily improve our 
+## Expected Runs in Baseball
 
-Logistic regression
+Long history of statistical analyses in baseball.
+This is partly due to its discrete nature; this permits analyses at the game-, inning-, at-bat-, and pitch-level.
 
-Random forests
+### Accessing StatCast Data
+
+## 
+
+## Building our own expected goals model
 
 
-## An initial XG model
+Recall the interpretation of conditional expectation $\mathbb{E}[Y \vert X = x]$: we look at all possible combinations of $(X,Y)$ where $X = x$ and take the
+In the context of expected runs, $Y$ is the number of runs scored in the half-inning.
+And to estimate expected runs, we mirroed this definition: we looked
+
+We only conditioned on a handful of variables.
+You might (credibly!) argue that we can get a more nuanced 
+
+Unforutnately, we can't just "bin and average" anymore.
+Expected goals in soccer is a good example of this.
+
+<!--
+  Exercise: re-compute run expectancy based on the combination of outs, baserunners, and count. 
+  What is the value of a called strike? 
+-->
+
+Formally, for every shot attempt let $Y$ be an indicator that the shot was made and let $\mathbf{X}$ be the conditioning information.
+Depending on what we include in $\mathbf{X}$, XG can be very fine-grained
+
+You might argue that the va
 
 
 Intuitively, we expect shots taken very close to the goal to have larger xG than shots taken very far from the goal
